--- a/gun071/ekran1.ui
+++ b/gun071/ekran1.ui
@@ -26,7 +26,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>PushButton</string>
+    <string>Arttir</string>
    </property>
   </widget>
   <widget class="QLabel" name="label">
@@ -40,6 +40,19 @@
    </property>
    <property name="text">
     <string>0</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_2">
+   <property name="geometry">
+    <rect>
+     <x>240</x>
+     <y>90</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Azalt</string>
    </property>
   </widget>
  </widget>
