--- a/gun08_kitaplik_projesi/giris.ui
+++ b/gun08_kitaplik_projesi/giris.ui
@@ -66,6 +66,9 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="echoMode">
+    <enum>QLineEdit::Password</enum>
+   </property>
   </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
